<resources>
    <string name="app_name">Sailing Events Organiser</string>
    <string name="FirstNameText">First Name :</string>
    <string name="FirstNameTextField">Enter First Name</string>
    <string name="SecondNameTextField">Enter Last Name</string>
    <string name="LastNameText">Last Name :</string>
    <string name="EmailText">Email :</string>
    <string name="UserMailId">Enter Email</string>
    <string name="submitButton">Register</string>
    <string name="List_of_Users_text">List Of Registered Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PasswordText">Password:</string>
    <string name="PasswordTextFiels">Enter Password</string>
    <string name="UserNameTextView">User Name:</string>
    <string name="UsernameTextField">Enter User Name</string>
    <string name="backButton">Back</string>
    <string name="Login_text">LOGIN</string>
    <string name="Login_here_text">Login here</string>
    <string name="Login_button">Login</string>
    <string name="signupText">Sign Up!</string>
    <string name="appMission">SAILING MADE EASIER</string>
    <string name="appIntro">This app provides everything you need to
organise your sailing events.</string>
    <string name="appIntro1">Register now to get started.</string>
    <string name="haveaccount">Already have an account? </string>
    <string name="donthaveaccount">Do not have an account?</string>
    <string name="full_name">%s, %s</string>
    <string name="string_of">of</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="no_data">No Data</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="delete_all">Delete All</string>
    <string name="add_task">Add Task</string>
    <string name="save">Save</string>
    <string name="delete_task">Delete Task</string>
    <string name="register">REGISTER</string>
    <string name="list_of_posts">List of posts</string>
    <string name="textview">TextView</string>
    <string name="location">Location:</string>
    <string name="visit_todo_list">View ToDo Tasks</string>
    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>
