<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".register.RegisterFragment">
    <data>
        <variable
            name="myViewModel"
            type="com.sid1818416.eventorganiser.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:id="@+id/secondNameTextField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="16sp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/custom_input"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/SecondNameTextField"
            android:inputType="textPersonName"
            android:text="@={myViewModel.inputLastName}"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondNameText" />

        <TextView
            android:id="@+id/firstNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/roboto"
            android:text="@string/FirstNameText"
            android:textAlignment="viewStart"
            android:textColor="#131844"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/first_name_text_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/first_name_text_field"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="16sp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/FirstNameTextField"
            android:background="@drawable/custom_input"
            android:importantForAutofill="no"
            android:text="@={myViewModel.inputFirstName}"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameText" />

        <TextView
            android:id="@+id/secondNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:text="@string/LastNameText"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_text_field"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/roboto"
            android:text="@string/UserNameTextView"
            android:textAlignment="viewStart"
            android:textColor="#131844"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondNameTextField" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/roboto"
            android:text="@string/PasswordText"
            android:textAlignment="viewStart"
            android:textColor="#131844"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextField" />

        <EditText
            android:id="@+id/userNameTextField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="16sp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:hint="@string/UsernameTextField"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={myViewModel.inputUsername}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="16sp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:ems="10"
            android:hint="@string/PasswordTextFiels"
            android:background="@drawable/custom_input"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={myViewModel.inputPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:background="#131844"
            android:padding="@dimen/small_padding"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:onClick="@{()->myViewModel.sumbitButton()}"
            android:text="@string/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/register"
            android:textColor="#131844"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/firstNameText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/roboto"
            android:text="@string/haveaccount"
            android:textColor="#131844"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submitButton" />

        <TextView
            android:id="@+id/loginLink1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Login_here_text"
            android:textColor="#28A39F"
            android:onClick="@{()->myViewModel.signIn()}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/signUpButton"
            app:layout_constraintStart_toEndOf="@+id/signUpButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>