<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginFragment">
    <data>
        <variable
            name="myLoginViewModel"
            type="com.sid1818416.eventorganiser.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/detail_background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Login_text"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="73dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/roboto"
            android:text="@string/UserNameTextView"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/roboto"
            android:text="@string/PasswordText"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextField" />

        <EditText
            android:id="@+id/userNameTextField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:paddingStart="24dp"
            android:background="@drawable/custom_input"
            android:paddingEnd="24dp"
            android:textSize="16sp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:ems="10"
            android:hint="@string/UsernameTextField"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={myLoginViewModel.inputUsername}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

        <EditText
            android:id="@+id/passwordTextField"
            android:background="@drawable/custom_input"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="16sp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:ems="10"
            android:hint="@string/PasswordTextFiels"
            android:importantForAutofill="no"
            android:inputType="textWebPassword"
            android:singleLine="true"
            android:text="@={myLoginViewModel.inputPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/blue_rounded_button"
            android:padding="@dimen/small_padding"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:onClick="@{()->myLoginViewModel.loginButton()}"
            android:text="@string/Login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

        <TextView
            android:id="@+id/SignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/roboto"
            android:text="@string/donthaveaccount"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submitButton" />

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/roboto"
            android:text="Sign up now"
            android:onClick="@{()->myLoginViewModel.signUP()}"
            android:textColor="#28A39F"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/SignUpButton"
            app:layout_constraintStart_toEndOf="@+id/SignUpButton"
            app:layout_constraintTop_toTopOf="@+id/SignUpButton"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>